--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/styles.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/styles.css" type="text/css">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <div class="title"></div>
-        <div class="textbox"></div>
+        <div class="title">
+            <p id="idk">Title</p>
+        </div>
+        <form class="textbox">
+            <input type="text" class="writtenTask" placeholder="Escriba su nueva tarea aquí">
+            <input type="submit" placeholder="Publicar">
+        </form>
     </div>
 </body>
 
 <footer>
-    <script type="module" src="/assets/js/script.js"></script>
+    <script type="module" src="./assets/js/script.js"></script>
 </footer>
 
 </html>
