--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <input type="text" class="writtenTask" placeholder="Escriba su nueva tarea aquí">
             <input type="submit" placeholder="Publicar">
         </form>
+        <div class="containerToDo"></div>
+        <div class="containerDoing"></div>
+        <div class="containerDone"></div>
     </div>
 </body>
 
