--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
             <input type="text" class="writtenTask" placeholder="Escriba su nueva tarea aquí">
             <input type="submit" placeholder="Publicar">
         </form>
-        <div class="containerToDo"></div>
-        <div class="containerDoing"></div>
-        <div class="containerDone"></div>
+        <div class="containerPaLosContainers">
+            <div class="containerToDo"></div>
+            <div class="containerDoing"></div>
+            <div class="containerDone"></div>
+        </div>
     </div>
 </body>
 
