--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="title">
-            <p id="idk">Title</p>
+            <p id="idk">Task manager</p>
         </div>
         <form class="textbox">
             <input type="text" class="writtenTask" placeholder="Escriba su nueva tarea aquí">
